# stitch-engine

./: BallTree.cpp  BallTree.h  Beam.cpp  Beam.h  BeamTree.cpp  BeamTree.h  BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt  Camera.cpp  Camera.h  CoffeeShake.txt  Doxyfile.in  EntryExit.h  HowTo.txt  Intersection.h  KDTree.cpp  KDTree.h  KNearestItems.h  Light.cpp  Light.h  Material.cpp  Material.h  Object.cpp  Object.h  Photon.cpp  Photon.h  PhotonMap.cpp  PhotonMap.h  README  RadianceMap.cpp  RadianceMap.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h  ToDo.txt  export.h  (+1 more)
Applications/: CMakeLists.txt  main.cpp  main_imgDiff.cpp  main_testBRDFs.cpp  main_testProbCalc.cpp
Data/: box.mdla
IOUtils/: exr.cpp  exr.h  mdla.cpp  mdla.h  obj.cpp  obj.h  ply.c  ply.h
Lights/: PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Materials/: BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  EmissiveMaterial.cpp  EmissiveMaterial.h  GlossyMaterial.cpp  GlossyMaterial.h  GlossyTrnsMaterial.cpp  GlossyTrnsMaterial.h  PhongMaterial.cpp  PhongMaterial.h  SpecularMaterial.cpp  SpecularMaterial.h
Math/: Colour.cpp  Colour.h  GlobalRand.cpp  GlobalRand.h  IVec.h  Line.cpp  Line.h  Mat4.cpp  Mat4.h  MathUtil.cpp  MathUtil.h  Plane.cpp  Plane.h  Ray.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  VecN.cpp  VecN.h
OSGUtils/: StitchOSG.cpp  StitchOSG.h  Viewer.cpp  Viewer.h
Objects/: BrushModel.cpp  BrushModel.h  PolygonModel.cpp  PolygonModel.h
Renderers/: LightBeamRenderer.cpp  LightBeamRenderer.h  LightFieldRenderer.cpp  LightFieldRenderer.h  PathTraceRenderer.cpp  PathTraceRenderer.h  PhotonMapRenderer.cpp  PhotonMapRenderer.h  PhotonTraceRenderer.cpp  PhotonTraceRenderer.h  WhittedRenderer.cpp  WhittedRenderer.h
